# how_many_squares

./: CMakeLists.txt  README.md
documentation/: architecture.md  design.md
include/: squares.h
src/: main.c  squares.c
tests/: test_squares.c  test_unity.c
